# youtube_rag

./: .env.example  README.md  check_groq_key.py  main.py  pyproject.toml  requirements.txt  vercel.json
app/: app.py
app/api/: dependencies.py  schemas.py
app/api/routes/: health.py  history.py  qa.py  videos.py
app/core/: config.py  exceptions.py  logging.py
app/rag/: chunker.py  history.py  retriever.py  store.py  transcript.py
app/services/: llm.py  video.py
static/: index.html
